bugfix: Move colorScheme scripts partial from neverland into head
This bunch of script tags were getting rendered in between <head />
and <body />; it still somehow seemed to work but the browser
did complain about it in a subtle way. This commit brings it
properly inside the <head /> tag

--- a/layouts/partials/head/head.html
+++ b/layouts/partials/head/head.html
@@ -8,7 +8,7 @@
 
     {{ template "_internal/google_analytics.html" . }}
     {{ template "_internal/google_analytics_async.html" . }}
-    
+
     <meta property="og:site_name" content="{{.Site.Params.siteName}}" />
     <meta property="og:title" content="{{with.Title}}{{.}} | {{end}}{{.Site.Title}}"/>
     <meta itemprop="name" content="{{with.Title}}{{.}} | {{end}}{{.Site.Title}}" />
@@ -46,4 +46,5 @@
     {{ $style := resources.Get "sass/main.scss" | toCSS | minify | fingerprint }}
     <link rel="stylesheet" href="{{ $style.RelPermalink }}">
     {{ partial "head/custom.html" . }}
+    {{ partialCached "head/colorScheme" . }}
 </head>
