ft: Update timestamp insertion across the board
Include year in YYYY format on all post timestamps,
as some listings are not grouped by Year and it is
nice to see the year of post along-side the date on
those listings.

This commit also includes the css for styling those
newly formatted timestamps.

This also implements the same change in the JS based
listings rendered by search.ts on the archives pages
using the updated index.json

--- a/layouts/_default/archives.html
+++ b/layouts/_default/archives.html
@@ -20,7 +20,7 @@
           {{ end }}
         </div>
         <input id="search-query" type="search" placeholder="Search for anything...">
-        
+
         <div id="search-results">
         </div>
         <section id="articles-list">
@@ -32,7 +32,7 @@
                     <div class="post">
                         <a href="{{ .RelPermalink }}">
                             <div class="post-row">
-                                <time>{{ .Date.Format "Jan 02" }}</time>
+                                {{ partial "post/timestamp.html" . }}
                                 <h3>{{ .Title }}</h3>
                             </div>
                         </a>
