--- a/assets/sass/components/_posts.scss
+++ b/assets/sass/components/_posts.scss
@@ -64,5 +64,9 @@
 
     .post-row time {
         flex: 0 0 80px;
+        flex-flow: row wrap;
+        line-height: 1.1;
+        span.date { color: white; }
+        span.year { display: block; color: white; font-size: larger; letter-spacing: 2px; opacity: 0.2; }
     }
 }
